<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="224dp"
    android:background="@color/miColormain1"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="351dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="62dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/registro" />

        <TextView
            android:id="@+id/tvTexto1"
            android:layout_width="234dp"
            android:layout_height="54dp"
            android:layout_marginEnd="8dp"
            android:text="@string/letrero_princ"
            android:textColor="@color/miColorPreferido"
            android:textColorLink="@color/miColorPreferido"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="349dp"
        android:layout_height="561dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textnombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombre"
                android:textColor="@color/miColorPreferido" />

            <EditText
                android:id="@+id/editnombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textapellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/letrero_apellidos1"
                android:textColor="@color/miColorPreferido" />

            <EditText
                android:id="@+id/editapellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textcuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/letrero_cuenta"
                android:textColor="@color/miColorPreferido" />

            <EditText
                android:id="@+id/editcuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textgenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/letrero_genero"
                android:textColor="@color/miColorPreferido" />

            <Spinner
                android:id="@+id/spinnergenero"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBoton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/boton_env" />

            <Button
                android:id="@+id/btnBoton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/boton_limp" />

            <Button
                android:id="@+id/btnBoton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Ver Lista" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>